--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,10 @@
-$color: red;
+// General Styles
+
+* {
+  margin: 0;
+  padding: 0;
+}
 
 body {
-  background-color: $color;
+  font-family: "Playfair Display", serif;
 }
