--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,10 +1,18 @@
-// General Styles
+@import "config" ;
 
-* {
+// General Styles
+  * {
   margin: 0;
   padding: 0;
 }
 
 body {
   font-family: "Playfair Display", serif;
+  line-height: 1.5;
+  background: #fff;
+}
+
+a {
+  text-decoration: none;
+  color: $dark-color;
 }
