--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,7 +1,7 @@
-@import "config" ;
+@import "config";
 
 // General Styles
-  * {
+* {
   margin: 0;
   padding: 0;
 }
@@ -15,4 +15,14 @@ body {
 a {
   text-decoration: none;
   color: $dark-color;
+}
+
+h2,
+h3,
+h4 {
+  text-transform: uppercase;
+}
+
+img {
+  width: 100%;
 }
