--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,5 @@
 @import "config";
+@import "utilities";
 
 // General Styles
 * {
@@ -25,4 +26,67 @@ h4 {
 
 img {
   width: 100%;
+}
+
+// Logo
+#logo {
+  width: 250px;
+  height: 90px;
+}
+
+// Main Navigation
+#main-nav {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 1rem;
+
+  ul {
+    display: flex;
+  }
+
+  li {
+    padding: 1rem 1.5rem;
+    list-style: none;
+  }
+
+  a {
+    text-decoration: none;
+    color: #fff;
+    text-transform: uppercase;
+    border-bottom: solid 3px transparent;
+    padding-bottom: 0.5rem;
+    transition: border-color 0.5s;
+
+    &:hover {
+      border-color: $medium-color;
+    }
+
+    &.current {
+      border-color: $main-color;
+    }
+  }
+}
+
+// Header
+#header {
+  // Header Home Page
+  &-home {
+    background: $main-color;
+    height: 100vh;
+    color: #fff;
+
+    // Header Content
+    .header-content {
+      text-align: center;
+      padding-top: 20%;
+
+      h1 {
+        font-size: 4rem;
+        line-height: 1.2;
+      }
+    }
+  }
+
+  &-inner {
+  }
 }
