section a added in html

--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -35,6 +35,7 @@
   }
 }
 
+//any button, a or input with class btn-
 button[class^="btn-"]:hover,
 a[class^="btn-"]:hover,
 input[class^="btn-"]:hover {
